--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-    # "frappe~=15.0.0" # Installed and managed by bench.
+    "opencv-contrib-python>=4.10.0.84"  # "frappe~=15.0.0" # Installed and managed by bench.
 ]
 
 [build-system]
