--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-    "opencv-contrib-python>=4.10.0.84"  # "frappe~=15.0.0" # Installed and managed by bench.
+    "opencv-contrib-python>=4.10.0.84",
+    "face_recognition>=1.3.0",
+    "dlib>=20.0.0",
+    "Pillow>=10.3.0",
+    "numpy>=1.26.4"
+    # "frappe~=15.0.0"  # Installed and managed by bench
 ]
 
 [build-system]
